# ChatApp

./: .gitignore
backend/: Cargo.toml
backend/chat_service/: Cargo.toml
backend/chat_service/migrations/2024-07-17-145149_chat_services_initial/: down.sql  up.sql
backend/chat_service/src/: main.rs  schema.rs
backend/chat_service/src/models/: chat_message.rs  conversation.rs  mod.rs  (+1 more)
backend/schedule_service/: Cargo.toml
backend/schedule_service/migrations/2024-07-17-173914_create_availabilities_and_events/: down.sql  up.sql
backend/schedule_service/migrations/2024-07-17-183500_add_created_updated_events_availabilities/: down.sql  up.sql
backend/schedule_service/migrations/2024-07-17-190701_remove_null_integer_array_events/: down.sql  up.sql
backend/schedule_service/src/: diesel_model.rs  main.rs  schema.rs
backend/schedule_service/src/graphql/: handlers.rs  mutation.rs  query.rs  schema.rs
backend/schedule_service/src/models/: availability.rs  event.rs  event_member.rs  mod.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  db.rs  lib.rs  schema.rs
backend/shared/tests/: integration_test.rs
backend/user_service/: Cargo.toml
backend/user_service/src/: auth.rs  main.rs  schema.rs
client/: pubspec.yaml
client/lib/: main.dart
client/lib/graphql/: mutation_type.graphql  query_type.graphql  schema.graphql
client/lib/models/: availability.dart  message.dart  user.dart
client/lib/providers/: current_user_provider.dart
client/lib/services/: graphql_service.dart  websocket_service.dart
client/test/: widget_test.dart
(+38 files in other folders)
