# [PROJECT_DIR]/schedule_service/Cargo.toml
[package]
name = "schedule_service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared"}
actix-web = "4.0"
actix = "0.13.5"
actix-cors = "0.6"
actix-web-actors = "4.3.0"
juniper = "0.15.8"
juniper_actix = "0.5.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "serde"
] }
env_logger = "0.10"
log = "0.4"
bcrypt = "0.10"
jsonwebtoken = "8.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.30"
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"